@@ -13,6 +13,7 @@
 #define _WX_LISTCTRL_H_
 
 #include "wx/textctrl.h"
+#include "wx/dynarray.h"
 
 class WXDLLIMPEXP_FWD_CORE wxImageList;
 
@@ -114,13 +115,25 @@ public:
     bool GetColumn(int col, wxListItem& item) const;
 
     // Sets information about this column
-    bool SetColumn(int col, const wxListItem& item) ;
+    bool SetColumn(int col, const wxListItem& item);
 
     // Gets the column width
     int GetColumnWidth(int col) const;
 
     // Sets the column width
-    bool SetColumnWidth(int col, int width) ;
+    bool SetColumnWidth(int col, int width);
+
+
+    // Gets the column order from its index or index from its order
+    int GetColumnOrder(int col) const;
+    int GetColumnIndexFromOrder(int order) const;
+
+    // Gets the column order for all columns
+    wxArrayInt GetColumnsOrder() const;
+
+    // Sets the column order for all columns
+    bool SetColumnsOrder(const wxArrayInt& orders);
+
 
     // Gets the number of items that can fit vertically in the
     // visible area of the list control (list or report view)
@@ -135,48 +148,48 @@ public:
     wxTextCtrl* GetEditControl() const;
 
     // Gets information about the item
-    bool GetItem(wxListItem& info) const ;
+    bool GetItem(wxListItem& info) const;
 
     // Sets information about the item
-    bool SetItem(wxListItem& info) ;
+    bool SetItem(wxListItem& info);
 
     // Sets a string field at a particular column
     long SetItem(long index, int col, const wxString& label, int imageId = -1);
 
     // Gets the item state
-    int  GetItemState(long item, long stateMask) const ;
+    int  GetItemState(long item, long stateMask) const;
 
     // Sets the item state
-    bool SetItemState(long item, long state, long stateMask) ;
+    bool SetItemState(long item, long state, long stateMask);
 
     // Sets the item image
-    bool SetItemImage(long item, int image, int selImage = -1) ;
+    bool SetItemImage(long item, int image, int selImage = -1);
     bool SetItemColumnImage(long item, long column, int image);
 
     // Gets the item text
-    wxString GetItemText(long item) const ;
+    wxString GetItemText(long item) const;
 
     // Sets the item text
-    void SetItemText(long item, const wxString& str) ;
+    void SetItemText(long item, const wxString& str);
 
     // Gets the item data
-    wxUIntPtr GetItemData(long item) const ;
+    wxUIntPtr GetItemData(long item) const;
 
     // Sets the item data
     bool SetItemPtrData(long item, wxUIntPtr data);
     bool SetItemData(long item, long data) { return SetItemPtrData(item, data); }
 
     // Gets the item rectangle
-    bool GetItemRect(long item, wxRect& rect, int code = wxLIST_RECT_BOUNDS) const ;
+    bool GetItemRect(long item, wxRect& rect, int code = wxLIST_RECT_BOUNDS) const;
 
     // Gets the subitem rectangle in report mode
-    bool GetSubItemRect(long item, long subItem, wxRect& rect, int code = wxLIST_RECT_BOUNDS) const ;
+    bool GetSubItemRect(long item, long subItem, wxRect& rect, int code = wxLIST_RECT_BOUNDS) const;
 
     // Gets the item position
-    bool GetItemPosition(long item, wxPoint& pos) const ;
+    bool GetItemPosition(long item, wxPoint& pos) const;
 
     // Sets the item position
-    bool SetItemPosition(long item, const wxPoint& pos) ;
+    bool SetItemPosition(long item, const wxPoint& pos);
 
     // Gets the number of items in the list control
     int GetItemCount() const;
@@ -210,22 +223,22 @@ public:
 
     // Gets the index of the topmost visible item when in
     // list or report view
-    long GetTopItem() const ;
+    long GetTopItem() const;
 
     // Add or remove a single window style
-    void SetSingleStyle(long style, bool add = true) ;
+    void SetSingleStyle(long style, bool add = true);
 
     // Set the whole window style
-    void SetWindowStyleFlag(long style) ;
+    void SetWindowStyleFlag(long style);
 
     // Searches for an item, starting from 'item'.
     // item can be -1 to find the first item that matches the
     // specified flags.
     // Returns the item or -1 if unsuccessful.
-    long GetNextItem(long item, int geometry = wxLIST_NEXT_ALL, int state = wxLIST_STATE_DONTCARE) const ;
+    long GetNextItem(long item, int geometry = wxLIST_NEXT_ALL, int state = wxLIST_STATE_DONTCARE) const;
 
     // Gets one of the three image lists
-    wxImageList *GetImageList(int which) const ;
+    wxImageList *GetImageList(int which) const;
 
     // Sets the image list
     // N.B. There's a quirk in the Win95 list view implementation.
@@ -234,8 +247,8 @@ public:
     // haven't specified wxLIST_MASK_IMAGE when inserting.
     // So you have to set a NULL small-icon image list to be sure that
     // the wxLC_LIST mode works without icons. Of course, you may want icons...
-    void SetImageList(wxImageList *imageList, int which) ;
-    void AssignImageList(wxImageList *imageList, int which) ;
+    void SetImageList(wxImageList *imageList, int which);
+    void AssignImageList(wxImageList *imageList, int which);
 
     // are we in report mode?
     bool InReportView() const { return HasFlag(wxLC_REPORT); }
@@ -257,7 +270,7 @@ public:
     bool DeleteItem(long item);
 
     // Deletes all items
-    bool DeleteAllItems() ;
+    bool DeleteAllItems();
 
     // Deletes a column
     bool DeleteColumn(int col);
@@ -275,7 +288,7 @@ public:
     bool EndEditLabel(bool cancel);
 
     // Ensures this item is visible
-    bool EnsureVisible(long item) ;
+    bool EnsureVisible(long item);
 
     // Find an item whose label matches this string, starting from the item after 'start'
     // or the beginning if 'start' is -1.
